# warsong-repo

./: .gitignore  README.md  cmd.sh  docker-compose.databases.yaml  docker-compose.queueservice.yaml
.github/workflow/test/: mordenkeinen.yaml
.github/workflows/: create-issue-from-pr.yaml
backend/mimic/: package.json
backend/owlbear/: go.mod
bigby/: CMakeLists.txt  main.cpp
bigby/cmd/: character.lua  cmd.cpp  cmd.hpp  item.lua  monster.lua
bigby/src/: CMakeLists.txt  main.cpp
bigby/src/cli/: CMakeLists.txt  cli.cpp  cli.hpp  cli.lua  monster.lua
deploys/config/: config-elminster.yaml
deploys/elminster/: deployment.yaml  server.yaml
elminster/: Dockerfile  Dockerfile.grpc  Dockerfile.server  Dockerfile.socket  Makefile  example.env  go.mod  go.sum  main.go
elminster/cmd/: grpc.go  migrate.go  root.go  server.go  udp.go
elminster/pkg/adapter/: character.go  generic.go  item.go  request.go
elminster/pkg/adapter/request/: character.go  weapon.go
elminster/pkg/adapter/response/: character.go
elminster/pkg/domain/: character.go  feat.go  item.go
elminster/pkg/infra/env/: env.go
elminster/pkg/repository/: character.go  feat.go  interface.go
elminster/pkg/utils/: id.go
mimic/: package.json
mimic/rust/src/: main.rs
mordenkainen/: build.zig  build.zig.zon
mordenkainen/src/: main.zig
mordenkeinen/: CMakeLists.txt  Cargo.toml  example.env  main.cpp
mordenkeinen/src/connections/: udp.cpp
mordenkeinen/src/infra/: postgresql.cpp
owlbear/: Makefile  main.c  makefile  owlbear
owlbear/c/: compile  main.c  makefile
owlbear/c/cli/: cli.c  cli.h
owlbear/c/utils/: utils.c  utils.h
owlbear/cli/: character.lua  cli.c  cli.h  cli.lua  monster.lua  npc.lua
owlbear/infra/db/: postgresql.c
owlbear/rust/: Cargo.toml
owlbear/utils/: utils.c
tasha/: Cargo.toml  go.mod
tasha/src/: main.rs  mod.rs
tasha/src/adapter/: user.rs
tasha/src/connections/: tcp.rs
tasha/src/controller/: auth.rs
tasha/src/user/: role.rs  user.rs
(+46 files in other folders)
